--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=PetMinder
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/PetMinder2
-spring.datasource.url=jdbc:postgresql://dpg-cst47qlds78s73cgb4e0-a.oregon-postgres.render.com/db_petminder_d8dt
+spring.datasource.url=jdbc:postgresql://dpg-cst47qlds78s73cgb4e0-a.oregon-postgres.render.com:5432/db_petminder_d8dt
 #spring.datasource.username=postgres
 spring.datasource.username=db_petminder_user
 #spring.datasource.password=1234
